# valve-kv

./: Cargo.toml
src/: deserializer.rs  error.rs  kv.pest  kv.rs  lib.rs  parser.rs  serializer.rs
tests/: deserializer.rs  parser.rs  serializer.rs
tests/test_kvs/: base.kv
tests/test_kvs/nested/: nested.kv
