[package]
name = "valve-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
quote = "1.0.33"
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.107"
syn = "2.0.38"
